arr/helmarr/helmarr-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: helmarr
  namespace: arr
  labels:
    app.kubernetes.io/name: helmarr
    app.kubernetes.io/part-of: arr
spec:
  entryPoints:
    - websecure
  routes:

    - match: Host(`helmarr.flexflix.top`) && Header(`HELMARR_APPLICATION`, `radarr`)
      kind: Rule
      services:
        - name: radarr
          port: 7878
      middlewares:
        - name: authentik
          namespace: authentik

    - match: Host(`helmarr.flexflix.top`) && Header(`HELMARR_APPLICATION`, `sonarr`)
      kind: Rule
      services:
        - name: sonarr
          port: 8989
      middlewares:
        - name: authentik
          namespace: authentik

    - match: Host(`helmarr.flexflix.top`) && Header(`HELMARR_APPLICATION`, `prowlarr`)
      kind: Rule
      services:
        - name: prowlarr
          port: 9696
      middlewares:
        - name: authentik
          namespace: authentik

    - match: Host(`helmarr.flexflix.top`) && Header(`HELMARR_APPLICATION`, `bazarr`)
      kind: Rule
      services:
        - name: bazarr
          port: 6767
      middlewares:
        - name: authentik
          namespace: authentik

    - match: Host(`helmarr.flexflix.top`) && Header(`HELMARR_APPLICATION`, `sabnzbd`)
      kind: Rule
      services:
        - name: sabnzbd
          port: 8080
      middlewares:
        - name: authentik
          namespace: authentik
